Fix Edicy button alignment

--- a/stylesheets/sass/_menus.scss
+++ b/stylesheets/sass/_menus.scss
@@ -56,7 +56,6 @@
 
 %edit-btn {
   display: inline-block;
-  vertical-align: bottom;
 }
 
 .menu {
